--- a/css/style.css
+++ b/css/style.css
@@ -1025,6 +1025,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  min-width: 0;
 }
 
 .articles-header {
